--- a/form.html
+++ b/form.html
@@ -14,6 +14,7 @@
 
 <body class="bodyclass">
 <header class="headerclass"> </header>
+
 <main class="mainclass">
     <div class="divtitulo">
         <h1>Formulario de contacto </h1>
@@ -26,7 +27,7 @@
         <label class="etiqueta"for="email">Email:</label>
         <input class="combo"type="text" id="email" placeholder="Introduce tu Email">
         <label class="etiqueta" for="edad">Edad:</label>
-        <input class="combo" type="number" id="edad" placeholder="Introduce tu Edad,debes ser mayor de edad" min="18">
+        <input class="combo" type="number" id="edad" placeholder="Introduce tu Edad,debes ser mayor de edad" min="18" max="100">
         <label class="etiqueta"for="rol">¿Que rol describe mejor tu situación actual?:</label>
         <input class="combo"type="text" id="rol" placeholder="Introduce tu Email">
         <p> <label class="etiqueta"for="desplegable" >¿Que rol describe mejor tu situación actual??:</label></p>
@@ -39,9 +40,9 @@
              </select>
         
         <label class="etiqueta"for="recomendar" >¿Recomendarias esta página un conocido?:</label>
-        <input class="comboradio"type="radio" id="recomendar"name="radio" value="Definitiva"> Definitivamente si
-        <input class="comboradio"type="radio" id="recomendar"name="radio" value="quizas" > Quizás
-        <input class="comboradio"type="radio" id="recomendar"name="radio" value="noseguro" > No estoy seguro
+        <input class="comboradio"type="radio" id="recomendar1"name="radio" value="Definitiva"> Definitivamente si
+        <input class="comboradio"type="radio" id="recomendar2"name="radio" value="quizas" > Quizás
+        <input class="comboradio"type="radio" id="recomendar3"name="radio" value="noseguro" > No estoy seguro
         <p>
         <label class="etiqueta"for="check" >¿Qué recomendaciones te gustaría recibir?(Marca todas las que apliquen):</label>
         </p>
