updated chess with font

--- a/chess/chess.html
+++ b/chess/chess.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chessboard</title>
-    <link href="./styles/normalize.css" rel="stylesheet" />
     <link href="styles.css" rel="stylesheet" />
+    <link href="./font/font.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <div id="board">
             <div id="board-squares">
                 <!-- 1 -->
-                <div class="row" id="row-one">
+                <div>
                     <div class="light-square">
                         <p class="piece">♜</p>
                     </div>
@@ -40,7 +40,7 @@
                 </div>
 
                 <!-- 2 -->
-                <div class="row" id="row-two">
+                <div>
                     <div class="dark-square">
                         <p class="piece">♞</p>
                     </div>
@@ -60,7 +60,7 @@
                 </div>
 
                 <!-- 3 -->
-                <div class="row" id="row-three">
+                <div>
                     <div class="light-square">
                         <p class="piece">♝</p>
                     </div>
@@ -80,7 +80,7 @@
                 </div>
 
                 <!-- 4 -->
-                <div class="row" id="tow-four">
+                <div>
                     <div class="dark-square">
                         <p class="piece">♛</p>
                     </div>
@@ -100,7 +100,7 @@
                 </div>
 
                 <!-- 5 -->
-                <div class="row" id="row-five">
+                <div>
                     <div class="light-square">
                         <p class="piece">♚</p>
                     </div>
@@ -120,7 +120,7 @@
                 </div>
 
                 <!-- 6 -->
-                <div class="row" id="row-six">
+                <div>
                     <div class="dark-square">
                         <p class="piece">♝</p>
                     </div>
@@ -140,7 +140,7 @@
                 </div>
 
                 <!-- 7 -->
-                <div class="row" id="row-seven">
+                <div>
                     <div class="light-square">
                         <p class="piece">♞</p>
                     </div>
@@ -160,7 +160,7 @@
                 </div>
 
                 <!-- 8 -->
-                <div class="row" id="row-eigth">
+                <div>
                     <div class="dark-square">
                         <p class="piece">♜</p>
                     </div>
