--- a/trabajo.html
+++ b/trabajo.html
@@ -50,10 +50,10 @@
 
         </nav>
 
-        <header class="header"><h1>primer texto</h1><p>segundo texto</p>
+        <header class="header">
 
-        <div class="header-video">
-        <video src="./video/video.mp4" controls autoplay mute></video>
+        <div class="header-video"><div class=textoV><h1>primer texto</h1><p>segundo texto</p></div>
+        <video src="./video/video.mp4" controls autoplay ></video>
         </div>
 
         </header>
