--- a/chess/chess.html
+++ b/chess/chess.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chessboard</title>
     <link href="styles.css" rel="stylesheet" />
-    <link href="./font/font.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/fuente/font.css">
 </head>
 
 <body>
@@ -181,6 +181,7 @@
             </div>
         </div>
     </div>
+    <footer>Copyright © Jorge Alba & Andrea</footer>
 </body>
 
 </html>
