changes in home v2

--- a/index.html
+++ b/index.html
@@ -139,66 +139,68 @@
             <h1 style="font-size: 20px;color: rgb(88, 87, 87);">Find a plan that's right for you</h1>
             <h3 style="font-size: 12px;color: rgb(145, 140, 140);">Every plan comes with a 30-day free trial</h3>
 
+            <div class="packages">
+                <div class="Br package">
 
-            <div class="Br" style="background-color: white;padding-bottom: 20px;">
+                    <div class="price price1" style="font-size: 12px;color: rgb(88, 87, 87);">
 
-                <div class="price1" style="font-size: 12px;color: rgb(88, 87, 87);">
-
-                    <h2>Bronze Packege</h2>
-                    <h3>10 Month</h3>
-                </div>
-                <ul>
-                    <li>Unlimited Listing</li>
-                    <li>Edit your listing</li>
-                    <li>Approve Reviews</li>
-                </ul>
+                        <h2>Bronze Packege</h2>
+                        <h3>10 Month</h3>
+                    </div>
+                    <ul>
+                        <li>Unlimited Listing</li>
+                        <li>Edit your listing</li>
+                        <li>Approve Reviews</li>
+                    </ul>
 
 
-                <button class="boton">Get started Now</button>
+                    <button class="boton">Get started Now</button>
 
-            </div>
-
-            <div class="go" style="background-color: white;padding-bottom: 20px;">
-
-                <div class="price2" style="font-size: 12px;color: rgb(88, 87, 87);">
-
-                    <h2>Gold Packege</h2>
-                    <h3>19 Month</h3>
                 </div>
 
-                <ul>
-                    <li>Unlimited Listing</li>
-                    <li>Edit your listing</li>
-                    <li>Approve Reviews</li>
-                    <li>Take Booking Online</li>
-                    <li>24/7 Support Device</li>
+                <div class="go package">
 
-                </ul>
+                    <div class="price price2" style="font-size: 12px;color: rgb(88, 87, 87);">
+                        <div class="badge-container">
+                            <div class="popular-price">Most popular</div>
+                        </div>
+                        <h2>Gold Packege</h2>
+                        <h3>19 Month</h3>
+                    </div>
+
+                    <ul>
+                        <li>Unlimited Listing</li>
+                        <li>Edit your listing</li>
+                        <li>Approve Reviews</li>
+                        <li>Take Booking Online</li>
+                        <li>24/7 Support Device</li>
+
+                    </ul>
 
 
-                <button class="boton">Get started Now</button>
+                    <button class="boton">Get started Now</button>
 
-            </div>
-
-
-            <div class="pl" style="background-color: white;padding-bottom: 20px;">
-
-                <div class="price3" style="font-size: 12px;color: rgb(88, 87, 87);">
-
-                    <h2>Platinum Packege</h2>
-                    <h3>49 Month</h3>
                 </div>
 
 
-                <ul>
-                    <li>Unlimited Listing</li>
-                    <li>Edit your listing</li>
-                    <li>Approve Reviews</li>
-                </ul>
+                <div class="pl package">
 
-                <button class="boton">Get started Now</button>
+                    <div class="price price3" style="font-size: 12px;color: rgb(88, 87, 87);">
+
+                        <h2>Platinum Packege</h2>
+                        <h3>49 Month</h3>
+                    </div>
+
+
+                    <ul>
+                        <li>Unlimited Listing</li>
+                        <li>Edit your listing</li>
+                        <li>Approve Reviews</li>
+                    </ul>
+
+                    <button class="boton">Get started Now</button>
+                </div>
             </div>
-
         </div>
 
     </div>
