--- a/chess/chess.html
+++ b/chess/chess.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <section class="pieces-selector">
-    </section>
+    <section class="pieces-selector"> </section>
+
     <label id="check">¿Quieres jugar con las fichas negras?</label>
     <input id="check" type="checkbox" />
+
     <div class="chessboard">
 
         <div id="board">
@@ -181,7 +182,9 @@
             </div>
         </div>
     </div>
-    <footer>Copyright © Jorge Alba & Andrea</footer>
+    <footer>
+        <p>Copyright © Jorge Alba & Andrea</p>
+    </footer>
 </body>
 
 </html>
